--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -93,15 +93,15 @@
 The latest stable version of GL2PS is <a
 href="http://geuz.org/gl2ps/src/gl2ps-1.4.0.tgz">gl2ps-1.4.0.tgz</a>.  Older
 versions and nightly source snapshots are available <a
-href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
-'<code>svn co <a href="https://geuz.org/svn/gl2ps/trunk" data-tooltip=
- "Login and password: gl2ps">https://geuz.org/svn/gl2ps/trunk</a> gl2ps</code>'.
+href="http://geuz.org/gl2ps/src/">here</a>.  For access to the Git repository use:
+'<code>git clone <a href="http://gitlab.onelab.info/gl2ps/gl2ps.git"
+>http://gitlab.onelab.info/gl2ps/gl2ps.git</a></code>'.
 <p>
 For questions and discussions about GL2PS see the <a
-href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps mailing list</a>.  If you
+href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps mailing list</a>. If you
 think you have found a bug you can also file a report directly <a
-href="https://geuz.org/trac/gl2ps/newticket" data-tooltip="Login and password:
-gl2ps">here</a>. You can also subscribe to the <a
+href="http://gitlab.onelab.info/gl2ps/gl2ps/issues">here</a>. 
+You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
 released.
