--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1094,11 +1094,11 @@ anymore.
   gl2psPrintf; added \dd{gl2psTextOptColor}; minor fixes.
 \item[1.3.9] (Oct 17, 2015) Improved \dd{GL_POLYGON_OFFSET_FILL}; fixed scaling
   of images in SVG output.
-\item[1.4.0] Make it possible to add primitives directly, without parsing the
-  OpenGL feedback buffer, using \dd{gl2psAddPolyPrimitive}; \dd{gl2psBeginPage}
-  now accepts a buffersize of 0; new \dd{gl2psForceRasterPos}, \dd{gl2psLineCap}
-  and \dd{gl2psLineJoin}; fixed scaling of images in PDF output; fixed bug
-  leading to corrupted PDF output.
+\item[1.4.0] (Apr 4, 2017) Make it possible to add primitives directly, without
+  parsing the OpenGL feedback buffer, using \dd{gl2psAddPolyPrimitive};
+  \dd{gl2psBeginPage} now accepts a buffersize of 0; new
+  \dd{gl2psForceRasterPos}, \dd{gl2psLineCap} and \dd{gl2psLineJoin}; fixed
+  scaling of images in PDF output; fixed bug leading to corrupted PDF output.
 \end{description}
 
 \end{document}
