--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -92,7 +92,7 @@
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
 href="http://geuz.org/gl2ps/src/gl2ps-1.4.0.tgz">gl2ps-1.4.0.tgz</a>.  Older
-versions and nightly source snapshots are available <a
+versions and source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For access to the Git repository use:
 '<code>git clone <a href="http://gitlab.onelab.info/gl2ps/gl2ps.git"
 >http://gitlab.onelab.info/gl2ps/gl2ps.git</a></code>'.
