--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -91,7 +91,7 @@
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
-href="http://geuz.org/gl2ps/src/gl2ps-1.4.0.tgz">gl2ps-1.4.0.tgz</a>.  Older
+href="http://geuz.org/gl2ps/src/gl2ps-1.4.1.tgz">gl2ps-1.4.1.tgz</a>.  Older
 versions and source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For access to the Git repository use:
 '<code>git clone <a href="http://gitlab.onelab.info/gl2ps/gl2ps.git"
@@ -100,7 +100,7 @@ href="http://geuz.org/gl2ps/src/">here</a>.  For access to the Git repository us
 For questions and discussions about GL2PS see the <a
 href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps mailing list</a>. If you
 think you have found a bug you can also file a report directly <a
-href="http://gitlab.onelab.info/gl2ps/gl2ps/issues">here</a>. 
+href="http://gitlab.onelab.info/gl2ps/gl2ps/issues">here</a>.
 You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
@@ -358,7 +358,31 @@ library is not initialized (e.g.\ if \dd{gl2psEndPage} is called before
 \end{description}
 
 % -------------------------------------------------------------------------
+\subsection{\texttt{gl2psSorting}}
+\label{sec:gl2psSorting}
 
+\subsubsection{Specification}
+
+\begin{verbatim}
+GLint gl2psSorting( GLint value )
+\end{verbatim}
+
+\subsubsection{Description and arguments}
+
+\dd{gl2psSorting} specify the sorting algorithm for subsequent viewport(s).
+This function is useful in order to set different sorting algorithms
+from one viewport to another.
+
+\subsubsection{Return value}
+
+\noindent\dd{gl2psSorting} returns:
+\begin{description}
+\item[\dd{GL2PS_UNINITIALIZED}] if the library is not initialized;
+\item[\dd{GL2PS_ERROR}] if an error occurred;
+\item[\dd{GL2PS_SUCCESS}] otherwise.
+\end{description}
+
+% -------------------------------------------------------------------------
 \subsection{\texttt{gl2psText} and \texttt{gl2psTextOpt}}
 \label{sec:gl2psText}
 
@@ -603,13 +627,13 @@ output will look different from the corresponding OpenGL scene.
 
 For \dd{gl2psLineCap} allowed values are \dd{GL2PS_LINE_CAP_BUTT}
 (the default), \dd{GL2PS_LINE_CAP_ROUND} and \dd{GL2PS_LINE_CAP_SQUARE}. For
-\dd{gl2psLineJoin} allowed values are \dd{GL2PS_LINE_JOIN_MITER} 
+\dd{gl2psLineJoin} allowed values are \dd{GL2PS_LINE_JOIN_MITER}
 (the default), \dd{GL2PS_LINE_JOIN_ROUND} and \dd{GL2PS_LINE_JOIN_BEVEL}.
 
 \subsubsection{Return value}
 
 \noindent\dd{gl2psPointSize}, \dd{gl2psLineWidth}, \dd{gl2psLineCap}
-and \dd{gl2psLineJoin} return: 
+and \dd{gl2psLineJoin} return:
 \begin{description}
 \item[\dd{GL2PS_UNINITIALIZED}] if the library is not initialized;
 \item[\dd{GL2PS_ERROR}] if an error occurred;
@@ -939,7 +963,7 @@ rotated text in PDF output;
 %
 \noemail{Pantxo Diribarne}{pantxo.diribarne@gmail.com} for polygon offset
 improvement, image scaling fix for SVG and PDF output, PostScript viewport color
-bug fix, \dd{gl2psLineCap} and \dd{gl2psLineJoin};
+bug fix, \dd{gl2psLineCap}, \dd{gl2psLineJoin} and  \dd{gl2psSorting};
 %
 \noemail{David Lonie}{david.lonie@kitware.com} for direct addition of promitives
 (for newer OpenGL APIs without feedback buffer);
@@ -1099,6 +1123,8 @@ anymore.
   \dd{gl2psBeginPage} now accepts a buffersize of 0; new
   \dd{gl2psForceRasterPos}, \dd{gl2psLineCap} and \dd{gl2psLineJoin}; fixed
   scaling of images in PDF output; fixed bug leading to corrupted PDF output.
+\item[1.4.1] Added \dd{gl2psSorting} to change the sorting algorithm on the fly;
+  fix rotated text in PGF output.
 \end{description}
 
 \end{document}
