Use pt instead of px in SVG viewport (fixes #20)

--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1124,7 +1124,8 @@ anymore.
   \dd{gl2psForceRasterPos}, \dd{gl2psLineCap} and \dd{gl2psLineJoin}; fixed
   scaling of images in PDF output; fixed bug leading to corrupted PDF output.
 \item[1.4.1] Added \dd{gl2psSorting} to change the sorting algorithm on the fly;
-  fix rotated text in PGF output.
+  fix rotated text in PGF output; use \dd{pt} instead of \dd{px} in SVG
+  viewport.
 \end{description}
 
 \end{document}
